--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -43,13 +43,17 @@ Cross-Lingual Document Similarity and Event Tracking}
 \maketitle
 
 \begin{abstract}
+Today, we follow news  which is distributed globally and reported on in many different languages. When a significant event occurs, it is often reported on in many different sources. In this work, our goal is to consider the problem tracking events in a large multilingual stream. In this paper, we consider a particular aspect of this problem, namely how to link collections of articles in different languages which refer to the same event. Given a multi-lingual stream,  articles are first clustered according in each language we consider separately. Given these clusters, we first propose a  
+method to enables cross-lingual document similarity based on Wikipedia, which
+ enabling us to compute the similarity of any two articles regardless of language. Using this simliarity, we then propose an approach to find and match clusters across ;anguages which represent the same event. We provide an extensive evaluation of the performance of the system as a while as well as the quality of the similarity measure and linking algorithm. 
+ \begin{comment}
 Main points:
 \begin{itemize}
 \item Problem of tracking events in a large multilingual stream - we reduce it to event linking
 \item Two contributions. We propose a method that enables cross-lingaul document similarity an approach to linking multilingual data and an approach that uses is to link events.
 \item Evaluation of cross-lingual approaches on Wikipedia and the event linking task.
 \end{itemize}
-
+\end{comment}
 \end{abstract}
 %\section{Overview}
 %Structure
